support for retina displays (#1)

--- a/build.gradle
+++ b/build.gradle
@@ -90,5 +90,6 @@ if (SystemUtils.IS_OS_MAC) {
 		icon = new File(project.projectDir, '/package/osx/icon.icns')
 		bundleJRE = true
 		javaProperties.put("apple.laf.useScreenMenuBar", "true")
+		bundleExtras.put("NSHighResolutionCapable", "true")
 	}
 }
